This is a version that compiles. Spectating and Spectating a player works fine.